power: Add generic wakelock blocker driver v1.1.0
Based on ideas of FranciscoFranco's non-generic driver.

Sysfs node:

	/sys/class/misc/boeffla_wakelock_blocker/wakelock_blocker

		- list of wakelocks to be blocked, separated by semicolons

	/sys/class/misc/boeffla_wakelock_blocker/debug

		- write: 0/1 to switch off and on debug logging into dmesg
		- read:  get current driver internals

	/sys/class/misc/boeffla_wakelock_blocker/version

		- show driver version

Signed-off-by: andip71 <andreasp@gmx.de>

--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -324,6 +324,11 @@ config SUSPEND_TIME
 
 config FOTA_LIMIT
 	bool "Fota limit information node"
+
+config	BOEFFLA_WL_BLOCKER
+	bool "Boeffla generic wakelock blocker driver"
+	depends on PM
+	default N
 	default n
 	help
 	  Add sysfs to notify limit information to recovery module
